@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.0
 
+	- The newest Cygwin needs the same scandir() handling as
+	  HP-UX.
 	- FLUID didn't register the image formats in the
 	  fltk_images library, and had some other image
 	  management problems.
